[metadata]
name = napari-noise2void
version = 0.1.1
description = Image denoising using n2v (Krull et al. 2019, https://arxiv.org/abs/1811.10980)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/napari-noise2void
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-noise2void/issues
    Documentation = https://github.com/haesleinhuepf/napari-noise2void#README.md
    Source Code = https://github.com/haesleinhuepf/napari-noise2void
    User Support = https://github.com/haesleinhuepf/napari-noise2void/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    n2v
    tensorflow
    napari-tools-menu
    napari-time-slicer
    # https://github.com/napari/napari/issues/4415
    # https://github.com/napari/napari/issues/4708
    napari<=0.4.15
    vispy<=0.9.6

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-noise2void = napari_noise2void:napari.yaml

napari.plugin =
    napari-noise2void2 = napari_noise2void._widget


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
